--- a/RouteOptimizer/RouteOptimizer/Base.lproj/Main.storyboard
+++ b/RouteOptimizer/RouteOptimizer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Eja-az-I0m">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
@@ -13,11 +13,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hAz-rU-8Sh">
-                                <rect key="frame" x="265" y="285" width="71" height="30"/>
+                                <rect key="frame" x="125" y="269" width="71" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Find Place"/>
                                 <connections>
@@ -35,7 +35,103 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="219" y="658"/>
+            <point key="canvasLocation" x="259.73333333333335" y="652.25333333333333"/>
+        </scene>
+        <!--Search View Controller-->
+        <scene sceneID="kgf-Oo-s2t">
+            <objects>
+                <viewController id="Eja-az-I0m" customClass="SearchViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BNy-tB-4Yf"/>
+                        <viewControllerLayoutGuide type="bottom" id="p92-90-qek"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="S4v-0F-9ov">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ls9-Au-09r">
+                                <rect key="frame" x="38" y="59" width="50" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="KcA-FF-Ydc"/>
+                                    <constraint firstAttribute="width" constant="50" id="QRB-qE-lmp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOe-JK-cOL">
+                                <rect key="frame" x="39" y="104" width="50" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="7Pa-fJ-LaM"/>
+                                    <constraint firstAttribute="width" constant="50" id="FXg-Kn-53D"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YVQ-0M-B0c">
+                                <rect key="frame" x="40" y="144" width="53.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="San Jose, CA" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IRJ-7F-Zmq" userLabel="startTextField">
+                                <rect key="frame" x="106.5" y="55" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="qaf-wZ-TSM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Pharmacy" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kr1-WD-4p0">
+                                <rect key="frame" x="106.5" y="140" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="zYB-k3-2zr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Palo Alto, CA" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MUy-UG-9VO">
+                                <rect key="frame" x="106.5" y="100" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="xKC-5o-I6A"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Aq-O3-dUh">
+                                <rect key="frame" x="60" y="209" width="200" height="30"/>
+                                <state key="normal" title="Find Route!!"/>
+                                <connections>
+                                    <action selector="findRouteButtonClicked:" destination="Eja-az-I0m" eventType="touchUpInside" id="lcS-4I-pnD"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Kr1-WD-4p0" firstAttribute="top" secondItem="MUy-UG-9VO" secondAttribute="bottom" constant="10" id="2Jo-7W-3Qu"/>
+                            <constraint firstItem="IRJ-7F-Zmq" firstAttribute="top" secondItem="BNy-tB-4Yf" secondAttribute="bottom" constant="35" id="CGY-Ju-cdY"/>
+                            <constraint firstItem="dOe-JK-cOL" firstAttribute="top" secondItem="Ls9-Au-09r" secondAttribute="bottom" constant="24" id="CwL-pb-T6s"/>
+                            <constraint firstItem="dOe-JK-cOL" firstAttribute="leading" secondItem="S4v-0F-9ov" secondAttribute="leading" constant="39" id="Elk-rt-LWP"/>
+                            <constraint firstItem="MUy-UG-9VO" firstAttribute="top" secondItem="IRJ-7F-Zmq" secondAttribute="bottom" constant="15" id="KNx-B6-w3C"/>
+                            <constraint firstItem="YVQ-0M-B0c" firstAttribute="leading" secondItem="S4v-0F-9ov" secondAttribute="leading" constant="40" id="T1b-yN-c7W"/>
+                            <constraint firstItem="Ls9-Au-09r" firstAttribute="leading" secondItem="S4v-0F-9ov" secondAttribute="leading" constant="38" id="URT-BW-grO"/>
+                            <constraint firstItem="IRJ-7F-Zmq" firstAttribute="leading" secondItem="Ls9-Au-09r" secondAttribute="trailing" constant="18.5" id="W5n-gr-7vV"/>
+                            <constraint firstItem="YVQ-0M-B0c" firstAttribute="top" secondItem="dOe-JK-cOL" secondAttribute="bottom" constant="19" id="eL1-Ce-B17"/>
+                            <constraint firstItem="Kr1-WD-4p0" firstAttribute="leading" secondItem="YVQ-0M-B0c" secondAttribute="trailing" constant="13" id="mTQ-vb-bDq"/>
+                            <constraint firstItem="Ls9-Au-09r" firstAttribute="top" secondItem="BNy-tB-4Yf" secondAttribute="bottom" constant="39" id="mYd-Qa-3Rr"/>
+                            <constraint firstItem="MUy-UG-9VO" firstAttribute="leading" secondItem="dOe-JK-cOL" secondAttribute="trailing" constant="17.5" id="tnv-zE-puC"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="endAddress" destination="MUy-UG-9VO" id="EdC-BX-7I4"/>
+                        <outlet property="searchTerm" destination="Kr1-WD-4p0" id="szA-uS-IwW"/>
+                        <outlet property="startAddress" destination="IRJ-7F-Zmq" id="qhC-ek-1ae"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UvN-bn-OsM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="27" y="498"/>
         </scene>
     </scenes>
 </document>
