--- a/RouteOptimizer/RouteOptimizer/SearchResultCell.xib
+++ b/RouteOptimizer/RouteOptimizer/SearchResultCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
@@ -12,15 +12,15 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="198" height="50"/>
                 <subviews>
-                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Some Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6KF-HG-3Zr">
-                        <rect key="frame" x="7" y="0.0" width="100.5" height="23"/>
+                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6KF-HG-3Zr">
+                        <rect key="frame" x="7" y="0.0" width="101" height="23"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details of Some Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7tu-n1-8lM">
-                        <rect key="frame" x="16" y="24" width="149.5" height="18"/>
+                        <rect key="frame" x="16" y="24" width="150" height="18"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.46421243688080804" green="0.45433926685435783" blue="0.4499603143689585" alpha="1" colorSpace="calibratedRGB"/>
@@ -35,9 +35,11 @@
             <constraints>
                 <constraint firstItem="7tu-n1-8lM" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="26Q-Jm-8N0"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7tu-n1-8lM" secondAttribute="trailing" constant="8" id="EDs-rd-ddX"/>
+                <constraint firstItem="6KF-HG-3Zr" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="NmD-BK-jdb"/>
                 <constraint firstAttribute="bottom" secondItem="7tu-n1-8lM" secondAttribute="bottom" constant="8" id="Tlk-vC-C9N"/>
+                <constraint firstAttribute="trailing" secondItem="6KF-HG-3Zr" secondAttribute="trailing" constant="90" id="cfU-JK-TTU"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6KF-HG-3Zr" secondAttribute="trailing" constant="8" id="eNH-kb-Ovl"/>
-                <constraint firstItem="6KF-HG-3Zr" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="xyo-MG-STP"/>
+                <constraint firstItem="6KF-HG-3Zr" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="7" id="xyo-MG-STP"/>
             </constraints>
             <edgeInsets key="layoutMargins" top="8" left="0.0" bottom="8" right="0.0"/>
             <size key="customSize" width="198" height="73"/>
