--- a/RouteOptimizer/RouteOptimizer/Base.lproj/LaunchScreen.storyboard
+++ b/RouteOptimizer/RouteOptimizer/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" initialViewController="01J-lp-oVM">
-
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -20,10 +18,10 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="01_stophop_launch_screen" translatesAutoresizingMaskIntoConstraints="NO" id="jp6-QF-nfb">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <animations/>
                             </imageView>
                         </subviews>
                         <animations/>
-
                         <constraints>
                             <constraint firstItem="jp6-QF-nfb" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="CfI-Mh-Sos"/>
                             <constraint firstItem="jp6-QF-nfb" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="YGm-h9-LvE"/>
@@ -47,6 +45,7 @@
                     <view key="view" contentMode="scaleToFill" id="NsI-DE-AAp">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
@@ -65,6 +64,7 @@
                     <view key="view" contentMode="scaleToFill" id="PpU-g5-YdU">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
