--- a/RouteOptimizer/RouteOptimizer/Base.lproj/Main.storyboard
+++ b/RouteOptimizer/RouteOptimizer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
@@ -19,6 +19,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VCm-eS-pl2">
                                 <rect key="frame" x="0.0" y="170" width="320" height="15"/>
                                 <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="BIM-zx-WHy"/>
                                 </constraints>
@@ -41,10 +42,10 @@
                                 </connections>
                             </containerView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iWu-aL-pim">
-                                <rect key="frame" x="0.0" y="368" width="320" height="200"/>
+                                <rect key="frame" x="0.0" y="568" width="320" height="0.0"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="naQ-gp-cpo"/>
+                                    <constraint firstAttribute="height" id="naQ-gp-cpo"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KxK-6C-O33">
                                     <size key="itemSize" width="50" height="50"/>
@@ -91,49 +92,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-105" y="546"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="kgf-Oo-s2t">
-            <objects>
-                <viewController id="Eja-az-I0m" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="BNy-tB-4Yf"/>
-                        <viewControllerLayoutGuide type="bottom" id="p92-90-qek"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="S4v-0F-9ov">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Aq-O3-dUh">
-                                <rect key="frame" x="60" y="266" width="200" height="30"/>
-                                <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="4zX-5h-UDd"/>
-                                </constraints>
-                                <state key="normal" title="Find Route!!"/>
-                                <connections>
-                                    <action selector="findRouteButtonClicked:" destination="Eja-az-I0m" eventType="touchUpInside" id="lcS-4I-pnD"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <gestureRecognizers/>
-                        <constraints>
-                            <constraint firstItem="5Aq-O3-dUh" firstAttribute="centerX" secondItem="S4v-0F-9ov" secondAttribute="centerX" id="t4i-nJ-QFW"/>
-                        </constraints>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="Kzt-1M-1ek" appends="YES" id="Ra1-WA-Muj"/>
-                        </connections>
-                    </view>
-                    <connections>
-                        <outlet property="tapToDismissGestureRecognizer" destination="Kzt-1M-1ek" id="wI1-JC-y6b"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UvN-bn-OsM" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="Kzt-1M-1ek"/>
-            </objects>
-            <point key="canvasLocation" x="289" y="546"/>
         </scene>
         <!--Map Search View Controller-->
         <scene sceneID="2WC-dn-iqE">
@@ -188,25 +146,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5J4-hU-Usj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="691" y="546"/>
-        </scene>
-        <!--Place Details View Controller-->
-        <scene sceneID="Gwc-e7-yIP">
-            <objects>
-                <viewController id="75i-Bw-Vh2" customClass="PlaceDetailsViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="4fg-nj-jHH"/>
-                        <viewControllerLayoutGuide type="bottom" id="tjQ-sk-IkA"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="4RP-0x-PcA">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LHs-fq-eex" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1066" y="546"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="djH-oG-v1W">
