--- a/RouteOptimizer/RouteOptimizer/MapSearchResultCell.xib
+++ b/RouteOptimizer/RouteOptimizer/MapSearchResultCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -15,9 +15,12 @@
                 <subviews>
                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="location_marker" translatesAutoresizingMaskIntoConstraints="NO" id="qha-yW-tsf">
                         <rect key="frame" x="12" y="5" width="29" height="48"/>
+                        <animations/>
                     </imageView>
-                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="navigation_button" translatesAutoresizingMaskIntoConstraints="NO" id="YVn-C2-GEy">
-                        <rect key="frame" x="275" y="10" width="34" height="34"/>
+                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" image="forward_icon" highlightedImage="forward_icon" translatesAutoresizingMaskIntoConstraints="NO" id="YVn-C2-GEy">
+                        <rect key="frame" x="275" y="10" width="34" height="36"/>
+                        <animations/>
+                        <color key="backgroundColor" red="0.20784313725490197" green="0.69019607843137254" blue="0.050980392156862744" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="34" id="heQ-fP-xxZ"/>
                             <constraint firstAttribute="width" constant="34" id="vj9-mY-ZfR"/>
@@ -25,6 +28,7 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Patxi's Pizza San Francisco, CA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2NP-ur-bZr">
                         <rect key="frame" x="59" y="8" width="202" height="17"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="202" id="cb7-Gf-BHA"/>
                         </constraints>
@@ -34,6 +38,7 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Emerson Street, Palo Alto, CA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jBL-kn-DKc">
                         <rect key="frame" x="59" y="25" width="156" height="21"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="j1S-yp-PCA"/>
                         </constraints>
@@ -64,7 +69,7 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="forward_icon" width="9" height="16"/>
         <image name="location_marker" width="29" height="48"/>
-        <image name="navigation_button" width="34" height="34"/>
     </resources>
 </document>
