--- a/RouteOptimizer/RouteOptimizer/MerchantDetailsView.xib
+++ b/RouteOptimizer/RouteOptimizer/MerchantDetailsView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
@@ -16,6 +16,7 @@
             <subviews>
                 <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6ad-IR-5YT">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="136"/>
+                    <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="136" id="ihs-2R-w0T"/>
                     </constraints>
@@ -25,12 +26,14 @@
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Patxi's Pizza San Francisco" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tjw-j9-fgk">
                             <rect key="frame" x="49" y="10" width="175" height="17"/>
+                            <animations/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.10403625591836796" green="0.10142427647119225" blue="0.058966162324264521" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="navigation_button" translatesAutoresizingMaskIntoConstraints="NO" id="YVy-Tg-K5M">
                             <rect key="frame" x="273" y="10" width="34" height="34"/>
+                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="34" id="L71-i5-ztk"/>
                                 <constraint firstAttribute="height" constant="34" id="qTh-be-Z6L"/>
@@ -38,6 +41,7 @@
                         </imageView>
                         <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="location_marker" translatesAutoresizingMaskIntoConstraints="NO" id="Jm2-eL-J0D">
                             <rect key="frame" x="12" y="8" width="29" height="46"/>
+                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="29" id="2RW-gA-6Dp"/>
                                 <constraint firstAttribute="height" constant="46" id="IF7-b8-H5J"/>
@@ -45,6 +49,7 @@
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Emerson Street San Francisco, CA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7U-8x-HpD">
                             <rect key="frame" x="49" y="31" width="194" height="15"/>
+                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="15" id="m3v-yb-J3Y"/>
                             </constraints>
@@ -53,6 +58,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
+                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="YVy-Tg-K5M" firstAttribute="leading" secondItem="h7U-8x-HpD" secondAttribute="trailing" constant="30" id="1PO-Yv-fwe"/>
@@ -72,14 +78,17 @@
                     <subviews>
                         <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="ic_qu_direction_mylocation.png" translatesAutoresizingMaskIntoConstraints="NO" id="XvB-Gv-4lT">
                             <rect key="frame" x="12" y="13" width="24" height="24"/>
+                            <animations/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Open Until 9 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NTw-HO-BTF">
                             <rect key="frame" x="51" y="16" width="106" height="17"/>
+                            <animations/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
+                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="54" id="3oC-0v-7zO"/>
@@ -90,14 +99,17 @@
                     <subviews>
                         <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="ic_qu_direction_mylocation.png" translatesAutoresizingMaskIntoConstraints="NO" id="HOE-3O-TLr">
                             <rect key="frame" x="12" y="13" width="24" height="24"/>
+                            <animations/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Call Business" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DrB-xn-bNc">
                             <rect key="frame" x="51" y="18" width="86" height="17"/>
+                            <animations/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
+                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="54" id="W6F-WP-g4w"/>
@@ -109,11 +121,13 @@
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PHOTOS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A2p-ry-MPN">
                             <rect key="frame" x="14" y="9" width="57" height="17"/>
+                            <animations/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
+                    <animations/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="A2p-ry-MPN" firstAttribute="centerY" secondItem="hLt-r6-G2n" secondAttribute="centerY" id="CaT-lr-RRj"/>
@@ -126,6 +140,7 @@
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fGt-0w-7in" userLabel="Img1">
                             <rect key="frame" x="12" y="12" width="117" height="124"/>
+                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="124" id="I7d-An-5i0"/>
                                 <constraint firstAttribute="width" constant="117" id="VVZ-48-9Uw"/>
@@ -133,12 +148,14 @@
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rLb-Ut-C6H" userLabel="Img2">
                             <rect key="frame" x="186" y="12" width="117" height="124"/>
+                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="117" id="Agy-eJ-4sY"/>
                                 <constraint firstAttribute="height" constant="124" id="Hfv-Qw-pTF"/>
                             </constraints>
                         </imageView>
                     </subviews>
+                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="fGt-0w-7in" firstAttribute="leading" secondItem="PAF-Do-NUL" secondAttribute="leading" constant="12" id="FVv-ZD-NUn"/>
@@ -149,6 +166,7 @@
                     </constraints>
                 </view>
             </subviews>
+            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="niZ-gB-mib" secondAttribute="trailing" id="4Ua-cZ-6eO"/>
